--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTSettings": {
+    "securityKey": "sgRy1X8Q3vwt3D6A7mkopdLJoQguXkogmR1UTjGwEGQ=",
+    "validIssuer": "OutOfTheParkAPI",
+    "validAudience": "OutOfTheParkAPI",
+    "expiryInMinutes": 5
+  }
 }
