remove tls secret attempt

--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -27,99 +27,99 @@ spec:
             - containerPort: 443
               name: gateway-https
 ---
-apiVersion: v1
-kind: Secret
-metadata:
-  name: secret-tls
-type: kubernetes.io/tls
-data:
-  # the data is abbreviated in this example
-  tls.crt: |
-        MIIFqTCCA5GgAwIBAgIURTrWzvrTO1C3sU7RfGbpgNwEN6gwDQYJKoZIhvcNAQEL
-        BQAwZDELMAkGA1UEBhMCVVMxDTALBgNVBAgMBFV0YWgxEzARBgNVBAcMCkNlZGFy
-        IENpdHkxETAPBgNVBAoMCFJldmF0dXJlMQ0wCwYDVQQLDAR1bml0MQ8wDQYDVQQD
-        DAZUcmV2b3IwHhcNMjEwMjI1MDQyNjMyWhcNMjIwMjI1MDQyNjMyWjBkMQswCQYD
-        VQQGEwJVUzENMAsGA1UECAwEVXRhaDETMBEGA1UEBwwKQ2VkYXIgQ2l0eTERMA8G
-        A1UECgwIUmV2YXR1cmUxDTALBgNVBAsMBHVuaXQxDzANBgNVBAMMBlRyZXZvcjCC
-        AiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoCggIBAKI6hr0zLd3pdLYDKoS1tSi0
-        1ghgqffS5BvPEekJCbZTKVjblUbY88nDpN5UYNa7WH2JCI+JXvyxBTVXEWO/GhFG
-        zxrO3yYW0ON4DJQX3pARLLMjmWnjmJLPYb42EBy+ZvNgGwR3MSopXzlsanQ8VN70
-        7pBgumRhhw/6FnjpjMeiqhEndnmAJVBImEq74oWBoR42xlmbYLax8iqLsTQoNoUo
-        WFKqQTwHnoZkcGFP0uKCrd0UwGL/yOXtm4GbzAFoy88Q4JZRxzFAlGlz5cMM9lGX
-        SMTbr32ADr5aSm4npfYwJ24WZEfd/tS4IdrAIJ1w+/cxlKY92x0P+eX0uc01LQAs
-        68SkmTTNK+f4Za+Fz7/wwco75l5Po5Lj3CetG16S/dh8m0qhBf2K4U+dycOJi3vl
-        NNAw97aNo0poKCMexf1rUEridmHSzKKUPIGyVD8C4FVPCGjCjCBjIsB/UlSRGkzR
-        PbeyO6ZH4ZDQyUTTkvjGeIZngaNc2OvGeIOnVUzqrO6+mi+me92JKrOxma5YXip+
-        G6Q7xMZ0RQ++4G2X4kQfKleA1hwm3qviJ/23fedsoc1cz+jM8ffA7tI+VBLx0CsB
-        fDCB8n1bRmKTpxsq3Hjh61PI5gsZH8yvaT5cXvWoPpD4qrJJ5fd+XmLsNByaua9d
-        /8MaKlgT1txxmTR45RghAgMBAAGjUzBRMB0GA1UdDgQWBBQxOpMrJjJ/DwAaXuc9
-        YrF1oiBD4jAfBgNVHSMEGDAWgBQxOpMrJjJ/DwAaXuc9YrF1oiBD4jAPBgNVHRMB
-        Af8EBTADAQH/MA0GCSqGSIb3DQEBCwUAA4ICAQBXYCuJ/TP05oriEA2zhQLNEdU5
-        zTaM4QVoigqAocl1cG95gnxNzn7qq9OKsv5zoYiUCPE6Jv4Jv/kdvyxnr3POfgwx
-        QlTBK9oSg8zTEU0CxzqxGOl4koLS9GG2W7M2dXtC7bEu+mYWt+oRWB6JtyRVv9Ik
-        Wjx1I4hhdHSMGlQS43G4wsdqNcQ72gTipOFmSSw3yn64+YLBwaANsD/h/8NTGXJT
-        hDNjyRmQqv4qDdZtZDF7Qlkxzrlyg4Njag577j2v07Y/hengfljtVQqAd1tAQNOU
-        C8gsgdpZjNG1egPB06jHBh9/bomb9Tca/N6mTnfbmBgezNkh7rQ6rwyYJABTy31y
-        QL3UdV1ypmMMKyDC5AW2NQFbyVXIiua0Ir7NL//oy+fTBUAt1n8+Ai4H2qjeVX0t
-        3L3YjfLd4Ad2Ad0rtcLvTvXgajkPJKDrIaZoF6bBEHLInB6bCnNgEXUu5Umc/hp1
-        b2FdxT+Byzttp21Di8uFd2nhVAzBeB3yh9xiUsgGT2Fj1xnSLRxJqvFv+Jf0Sysb
-        YfySLTk1OhhH641l1tIjL/fRd8sI3PSBU5ohoadW9oTXj8zi8qcroSp5g4C9o5uS
-        Pf3vhQjy1/wAG9gqx+Y35IeE4xinCqtmq3ZWP/+hEcmPdIEOT31dxmxfaQXnjoYE
-        ExLb14CerjFLIWNuuA==
-  tls.key: |
-        MIIJnDBOBgkqhkiG9w0BBQ0wQTApBgkqhkiG9w0BBQwwHAQIXuF3uMTjT7oCAggA
-        MAwGCCqGSIb3DQIJBQAwFAYIKoZIhvcNAwcECJRfPfPfhFfZBIIJSMx8F1bk0yxZ
-        RwjPtGzN4bzikqu9jTqrKcwnaVwqaBUTRCO6Uq6lE4slHtyNLD/dszJfKDPOjs8b
-        +G/SLSvy60OrBmKLic5Y7c+4k7d/wYftbBdpwCmzqC7Adp2alyJ4y9i0NMKfyE2h
-        4TT6r/aPmZy1JbMNCNscwbeBAPhC/exZepx+ELHayftJdmMgmUMMVCs1i6STfGwy
-        HQ/rUa2KdyJYEFKR7wJFILob99RasilfYM38IYJFCYfKdKhtS7X5De8gEBa4yfOd
-        GLIksXkLVD0GjGdoG8qFGycu69t4r2DBdXlMjH/gK0j8ttpPvRuE1dvbr+rWDExa
-        yGaZ9V8bPCdnabLWr+FjT4GhVsc1EPAPQODsaSp+LxWfnhKLo6CEOFPkRoHr6O/D
-        mATBKo/UXuIPl012EXfUQ8GBpFqnXbDAZd6DEjUF/LhKDDYU5kocRIi4roABQGq/
-        e06YoskcizSnG5tNbiRm+V41U6qU0GvHvtWr+1jxVzQMj8usqCgi1qYTrkxeYuEk
-        QtgrBjQlnvldr5INktZABT/78R8PDcdy8APsmuZZnJjW8WQu2L+kFkdpLEGhy+ly
-        CXuHNIdDk+TOcXoaMkb4dRLrhNbSlHe71qCmXqaGDW7ZEoqTrb2b/fgHRqvIX3Tg
-        THnnYYWB3Zrg4/VLCfxwHSFeJlvhNe04Rzh3EylAL3ziGysM7CeFAUyUojO+EiyJ
-        zcD1Wn7EUnQqZGJn3xY+wpBqjc0IRnuaHPbo2ymDUpJkwtlZhwyNV5sRMK9mz3d3
-        VnQe/1vYosKmLMfuq8eOmQAw5dupNYWZx6MOZXndGba1S7gsD2wjxGOobpuuoGD9
-        YoBHWpON4imhNvw7vbvyTucm2vwGknZON4fgebcDXnx9WPDkwelvZdTIx05EncKO
-        6+PHhCnucU2h9TL9Y6B6jOTeerelD8xCHq8ibjYmpHpo/tKBbJn0TJetthUBjDBT
-        S3QV7p5j2vS13wAEZY6dFNMmFcyqbpix/+xKCi60HnKE+OM4wRaJFuGtMXYDJRP6
-        YlUlSqr3YYkZ1rMLbzvt+O3gLXIZab/xEQJxYE76sGpow0j/urYi/R1cSLHkdxsF
-        AFcP7BYWmCHT0DUOEXEHTm31qyAbQn9qcewWRtm1oY8gTevL26+tB9yrdcTTaV5s
-        904IJqgPsFnt8EeShwdWNKQCvjGfecIZfrKaj2XQLLykBVi9xcdFy9ZhlwoNPC8Y
-        uERaF3B5RO4kU7eaY8rSJA83UnZQNNMiGuax0x75rkK5dM30LcRrmh312SWW9Pou
-        mr4HZV70BOcCNcKwbWlu9HM51F44Gd+v4AgQB47OuMM6Skq2ulhb4hEH232kJZLi
-        z8XghB/EH7EFAX4VgR+jj2r9dio90tIQCSfIsc887AqwGZzwXGHUHoJwO0oAVnFN
-        xIstRvuu4R/xpTQs7YALAPgkQbUxTK588f7qv/6Wcc0G9k+fdeemeW//p1xzbNL8
-        75dirUBEhPTkC00HFx8l03+ljRS5vWbzH4bVq0TZaYiSl1y7v6iuFN5Jrs1i2rog
-        bgc+/J3lOJDrQ2rA3+EluVKcoTx85dxDEKE/vrdPmJjKgq0kIpnDJhehkh3y4M3H
-        f5Wi4Lpf3/hZLq1f6y9FvWg5xqc4DPh2PfuTnqb7t/OTgP4j9oG5wHn2IBnJmChQ
-        XH5eM2BKLu968IvJOlzQ/JIceaUJfy267yzO3vBMquFzsHX/v9vJ63EtWdKggnPn
-        p8b/JW7fi5YLN5F6wXnWgKgqE/T+Fi5udWiTc0ooYdx+R1t8hawNp41N4Xb4YZyT
-        cjQ6Fb+vDwFEv3PXRUR2gtwmelZ3t9uPjFq+cUVZSO4Lnb0Z396uB75o7owCTmeK
-        RpuwVXuxhOaQYMA7Yv0w51TKdQn/9Nr176jIEPPW/6tMOGROPvcATtJYjWoM5uqC
-        sEN7ob2Bkxpu1bMB9iL+FuFqjf34xn+12hdYcGtiN55x2a5qKSac8lAggeV2tnk3
-        56AJ4pCECwQW+wM1j8iSTG94x3xgHXTKa+ekpbpGDOsTlcu+mnlEes+PstuEkvkx
-        4r3B3ybEyMzTjHLGyWQZRFXAW/p4pqQxgZEpWSDx4EMFwV04mD4Wcw9vXBoYoTo9
-        tAoaUDed3eB/65Iw8fLEvFee6UcJmg3FcvAoh6nZR3TRSqr/YOYL37KU6Q+1MNna
-        iYNBOR/4BbsykAF1cUb4BQcL23MwpT8s7lC9aOceewv0nRlYcDzgx75s3kYt3N+A
-        6/tepkZPtwcddJPo/aomlvSQiLA016PUESqeqOMefjTD8Ir0pwbA5Ssbw9d/lPxv
-        oL1kwdziutXB0mpX1GHCxGX2u/lVBhLptCkb+4yiRJwQy5x7Y6i234/ptvJHnoEa
-        XWEkTPIQtj1X+cQdYUT97xB5B+fXh17m2PZjHrLnRlUoqjNcfT7hVRcAx5yD8Kf4
-        RZBjs7PjJLXHroerctHxFG3Hn8+z+fhd9oP4v2WBPjLkfKRi7XJIjB8jEPCHMBSH
-        hiuAA6pLCpWaOz/AEypYAqEyjqRtOMZb2OzNN7YL6Sj6KPJ1QJtwIGTseSRCzkp9
-        2KPna9PSaJIEzSRaz1hRfBANFnwroXGYqsQNXBlxd0g4WIlAgjJTC3b2BjyVL77T
-        m1KSU3XmrWwFXJoLNajWWt/QDlpmL1kzNY27++EHJ6SPyK2bolsYpZNB4K9hcIdU
-        0acSscpPEeqAiL5sOtLm6EI97I4pN41i6/4YdLdulXrJF0fTuUQOXnaoVnNT4Pak
-        Jkn2Ywz8TagpNown6mjhnSspz799dsBafPG9M/mhvQopH7gGt/qiQaCDDAnbBfXR
-        lQDtj6dplQYjmM/y58uLrBXd+6y7/w/ObHFW0mQuUoOMqKGOtsBdrNWCt3TOIedj
-        R8Pho9J3FdG5RPIBVtXyIovm6cHMc/surJ+dd0x/4+p8FQKmWIkC2PpUFF+TR03y
-        QEBTpilVZR0uwH2epv049IFlte914t6fnv0lU3AqLZKY587AJg51UXTQ+MHU5M16
-        6IbisR21P0RqeppO/2Ue6GmCpfVczOATkyITYqu0VqWnhEnTnZxCPH5HOpY1WEfu
-        J7oyz1BGd95Ocgv+BINNn8Kk78QzACYas/U1WWPHQHEIpf5p/6T9rnymzwgMbz9y
-        sut+kSKlJERL/lyzoi3zWA==
----
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: secret-tls
+# type: kubernetes.io/tls
+# data:
+#   # the data is abbreviated in this example
+#   tls.crt: |
+#         MIIFqTCCA5GgAwIBAgIURTrWzvrTO1C3sU7RfGbpgNwEN6gwDQYJKoZIhvcNAQEL
+#         BQAwZDELMAkGA1UEBhMCVVMxDTALBgNVBAgMBFV0YWgxEzARBgNVBAcMCkNlZGFy
+#         IENpdHkxETAPBgNVBAoMCFJldmF0dXJlMQ0wCwYDVQQLDAR1bml0MQ8wDQYDVQQD
+#         DAZUcmV2b3IwHhcNMjEwMjI1MDQyNjMyWhcNMjIwMjI1MDQyNjMyWjBkMQswCQYD
+#         VQQGEwJVUzENMAsGA1UECAwEVXRhaDETMBEGA1UEBwwKQ2VkYXIgQ2l0eTERMA8G
+#         A1UECgwIUmV2YXR1cmUxDTALBgNVBAsMBHVuaXQxDzANBgNVBAMMBlRyZXZvcjCC
+#         AiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoCggIBAKI6hr0zLd3pdLYDKoS1tSi0
+#         1ghgqffS5BvPEekJCbZTKVjblUbY88nDpN5UYNa7WH2JCI+JXvyxBTVXEWO/GhFG
+#         zxrO3yYW0ON4DJQX3pARLLMjmWnjmJLPYb42EBy+ZvNgGwR3MSopXzlsanQ8VN70
+#         7pBgumRhhw/6FnjpjMeiqhEndnmAJVBImEq74oWBoR42xlmbYLax8iqLsTQoNoUo
+#         WFKqQTwHnoZkcGFP0uKCrd0UwGL/yOXtm4GbzAFoy88Q4JZRxzFAlGlz5cMM9lGX
+#         SMTbr32ADr5aSm4npfYwJ24WZEfd/tS4IdrAIJ1w+/cxlKY92x0P+eX0uc01LQAs
+#         68SkmTTNK+f4Za+Fz7/wwco75l5Po5Lj3CetG16S/dh8m0qhBf2K4U+dycOJi3vl
+#         NNAw97aNo0poKCMexf1rUEridmHSzKKUPIGyVD8C4FVPCGjCjCBjIsB/UlSRGkzR
+#         PbeyO6ZH4ZDQyUTTkvjGeIZngaNc2OvGeIOnVUzqrO6+mi+me92JKrOxma5YXip+
+#         G6Q7xMZ0RQ++4G2X4kQfKleA1hwm3qviJ/23fedsoc1cz+jM8ffA7tI+VBLx0CsB
+#         fDCB8n1bRmKTpxsq3Hjh61PI5gsZH8yvaT5cXvWoPpD4qrJJ5fd+XmLsNByaua9d
+#         /8MaKlgT1txxmTR45RghAgMBAAGjUzBRMB0GA1UdDgQWBBQxOpMrJjJ/DwAaXuc9
+#         YrF1oiBD4jAfBgNVHSMEGDAWgBQxOpMrJjJ/DwAaXuc9YrF1oiBD4jAPBgNVHRMB
+#         Af8EBTADAQH/MA0GCSqGSIb3DQEBCwUAA4ICAQBXYCuJ/TP05oriEA2zhQLNEdU5
+#         zTaM4QVoigqAocl1cG95gnxNzn7qq9OKsv5zoYiUCPE6Jv4Jv/kdvyxnr3POfgwx
+#         QlTBK9oSg8zTEU0CxzqxGOl4koLS9GG2W7M2dXtC7bEu+mYWt+oRWB6JtyRVv9Ik
+#         Wjx1I4hhdHSMGlQS43G4wsdqNcQ72gTipOFmSSw3yn64+YLBwaANsD/h/8NTGXJT
+#         hDNjyRmQqv4qDdZtZDF7Qlkxzrlyg4Njag577j2v07Y/hengfljtVQqAd1tAQNOU
+#         C8gsgdpZjNG1egPB06jHBh9/bomb9Tca/N6mTnfbmBgezNkh7rQ6rwyYJABTy31y
+#         QL3UdV1ypmMMKyDC5AW2NQFbyVXIiua0Ir7NL//oy+fTBUAt1n8+Ai4H2qjeVX0t
+#         3L3YjfLd4Ad2Ad0rtcLvTvXgajkPJKDrIaZoF6bBEHLInB6bCnNgEXUu5Umc/hp1
+#         b2FdxT+Byzttp21Di8uFd2nhVAzBeB3yh9xiUsgGT2Fj1xnSLRxJqvFv+Jf0Sysb
+#         YfySLTk1OhhH641l1tIjL/fRd8sI3PSBU5ohoadW9oTXj8zi8qcroSp5g4C9o5uS
+#         Pf3vhQjy1/wAG9gqx+Y35IeE4xinCqtmq3ZWP/+hEcmPdIEOT31dxmxfaQXnjoYE
+#         ExLb14CerjFLIWNuuA==
+#   tls.key: |
+#         MIIJnDBOBgkqhkiG9w0BBQ0wQTApBgkqhkiG9w0BBQwwHAQIXuF3uMTjT7oCAggA
+#         MAwGCCqGSIb3DQIJBQAwFAYIKoZIhvcNAwcECJRfPfPfhFfZBIIJSMx8F1bk0yxZ
+#         RwjPtGzN4bzikqu9jTqrKcwnaVwqaBUTRCO6Uq6lE4slHtyNLD/dszJfKDPOjs8b
+#         +G/SLSvy60OrBmKLic5Y7c+4k7d/wYftbBdpwCmzqC7Adp2alyJ4y9i0NMKfyE2h
+#         4TT6r/aPmZy1JbMNCNscwbeBAPhC/exZepx+ELHayftJdmMgmUMMVCs1i6STfGwy
+#         HQ/rUa2KdyJYEFKR7wJFILob99RasilfYM38IYJFCYfKdKhtS7X5De8gEBa4yfOd
+#         GLIksXkLVD0GjGdoG8qFGycu69t4r2DBdXlMjH/gK0j8ttpPvRuE1dvbr+rWDExa
+#         yGaZ9V8bPCdnabLWr+FjT4GhVsc1EPAPQODsaSp+LxWfnhKLo6CEOFPkRoHr6O/D
+#         mATBKo/UXuIPl012EXfUQ8GBpFqnXbDAZd6DEjUF/LhKDDYU5kocRIi4roABQGq/
+#         e06YoskcizSnG5tNbiRm+V41U6qU0GvHvtWr+1jxVzQMj8usqCgi1qYTrkxeYuEk
+#         QtgrBjQlnvldr5INktZABT/78R8PDcdy8APsmuZZnJjW8WQu2L+kFkdpLEGhy+ly
+#         CXuHNIdDk+TOcXoaMkb4dRLrhNbSlHe71qCmXqaGDW7ZEoqTrb2b/fgHRqvIX3Tg
+#         THnnYYWB3Zrg4/VLCfxwHSFeJlvhNe04Rzh3EylAL3ziGysM7CeFAUyUojO+EiyJ
+#         zcD1Wn7EUnQqZGJn3xY+wpBqjc0IRnuaHPbo2ymDUpJkwtlZhwyNV5sRMK9mz3d3
+#         VnQe/1vYosKmLMfuq8eOmQAw5dupNYWZx6MOZXndGba1S7gsD2wjxGOobpuuoGD9
+#         YoBHWpON4imhNvw7vbvyTucm2vwGknZON4fgebcDXnx9WPDkwelvZdTIx05EncKO
+#         6+PHhCnucU2h9TL9Y6B6jOTeerelD8xCHq8ibjYmpHpo/tKBbJn0TJetthUBjDBT
+#         S3QV7p5j2vS13wAEZY6dFNMmFcyqbpix/+xKCi60HnKE+OM4wRaJFuGtMXYDJRP6
+#         YlUlSqr3YYkZ1rMLbzvt+O3gLXIZab/xEQJxYE76sGpow0j/urYi/R1cSLHkdxsF
+#         AFcP7BYWmCHT0DUOEXEHTm31qyAbQn9qcewWRtm1oY8gTevL26+tB9yrdcTTaV5s
+#         904IJqgPsFnt8EeShwdWNKQCvjGfecIZfrKaj2XQLLykBVi9xcdFy9ZhlwoNPC8Y
+#         uERaF3B5RO4kU7eaY8rSJA83UnZQNNMiGuax0x75rkK5dM30LcRrmh312SWW9Pou
+#         mr4HZV70BOcCNcKwbWlu9HM51F44Gd+v4AgQB47OuMM6Skq2ulhb4hEH232kJZLi
+#         z8XghB/EH7EFAX4VgR+jj2r9dio90tIQCSfIsc887AqwGZzwXGHUHoJwO0oAVnFN
+#         xIstRvuu4R/xpTQs7YALAPgkQbUxTK588f7qv/6Wcc0G9k+fdeemeW//p1xzbNL8
+#         75dirUBEhPTkC00HFx8l03+ljRS5vWbzH4bVq0TZaYiSl1y7v6iuFN5Jrs1i2rog
+#         bgc+/J3lOJDrQ2rA3+EluVKcoTx85dxDEKE/vrdPmJjKgq0kIpnDJhehkh3y4M3H
+#         f5Wi4Lpf3/hZLq1f6y9FvWg5xqc4DPh2PfuTnqb7t/OTgP4j9oG5wHn2IBnJmChQ
+#         XH5eM2BKLu968IvJOlzQ/JIceaUJfy267yzO3vBMquFzsHX/v9vJ63EtWdKggnPn
+#         p8b/JW7fi5YLN5F6wXnWgKgqE/T+Fi5udWiTc0ooYdx+R1t8hawNp41N4Xb4YZyT
+#         cjQ6Fb+vDwFEv3PXRUR2gtwmelZ3t9uPjFq+cUVZSO4Lnb0Z396uB75o7owCTmeK
+#         RpuwVXuxhOaQYMA7Yv0w51TKdQn/9Nr176jIEPPW/6tMOGROPvcATtJYjWoM5uqC
+#         sEN7ob2Bkxpu1bMB9iL+FuFqjf34xn+12hdYcGtiN55x2a5qKSac8lAggeV2tnk3
+#         56AJ4pCECwQW+wM1j8iSTG94x3xgHXTKa+ekpbpGDOsTlcu+mnlEes+PstuEkvkx
+#         4r3B3ybEyMzTjHLGyWQZRFXAW/p4pqQxgZEpWSDx4EMFwV04mD4Wcw9vXBoYoTo9
+#         tAoaUDed3eB/65Iw8fLEvFee6UcJmg3FcvAoh6nZR3TRSqr/YOYL37KU6Q+1MNna
+#         iYNBOR/4BbsykAF1cUb4BQcL23MwpT8s7lC9aOceewv0nRlYcDzgx75s3kYt3N+A
+#         6/tepkZPtwcddJPo/aomlvSQiLA016PUESqeqOMefjTD8Ir0pwbA5Ssbw9d/lPxv
+#         oL1kwdziutXB0mpX1GHCxGX2u/lVBhLptCkb+4yiRJwQy5x7Y6i234/ptvJHnoEa
+#         XWEkTPIQtj1X+cQdYUT97xB5B+fXh17m2PZjHrLnRlUoqjNcfT7hVRcAx5yD8Kf4
+#         RZBjs7PjJLXHroerctHxFG3Hn8+z+fhd9oP4v2WBPjLkfKRi7XJIjB8jEPCHMBSH
+#         hiuAA6pLCpWaOz/AEypYAqEyjqRtOMZb2OzNN7YL6Sj6KPJ1QJtwIGTseSRCzkp9
+#         2KPna9PSaJIEzSRaz1hRfBANFnwroXGYqsQNXBlxd0g4WIlAgjJTC3b2BjyVL77T
+#         m1KSU3XmrWwFXJoLNajWWt/QDlpmL1kzNY27++EHJ6SPyK2bolsYpZNB4K9hcIdU
+#         0acSscpPEeqAiL5sOtLm6EI97I4pN41i6/4YdLdulXrJF0fTuUQOXnaoVnNT4Pak
+#         Jkn2Ywz8TagpNown6mjhnSspz799dsBafPG9M/mhvQopH7gGt/qiQaCDDAnbBfXR
+#         lQDtj6dplQYjmM/y58uLrBXd+6y7/w/ObHFW0mQuUoOMqKGOtsBdrNWCt3TOIedj
+#         R8Pho9J3FdG5RPIBVtXyIovm6cHMc/surJ+dd0x/4+p8FQKmWIkC2PpUFF+TR03y
+#         QEBTpilVZR0uwH2epv049IFlte914t6fnv0lU3AqLZKY587AJg51UXTQ+MHU5M16
+#         6IbisR21P0RqeppO/2Ue6GmCpfVczOATkyITYqu0VqWnhEnTnZxCPH5HOpY1WEfu
+#         J7oyz1BGd95Ocgv+BINNn8Kk78QzACYas/U1WWPHQHEIpf5p/6T9rnymzwgMbz9y
+#         sut+kSKlJERL/lyzoi3zWA==
+# ---
 apiVersion: v1
 kind: Service
 metadata:
