--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -128,13 +128,11 @@ spec:
   ports:
     - name: gateway
       port: 80
-      targetPort: gateway-http
+      targetPort: 80
     - name: https
       protocol: TCP
       port: 443
-      targetPort: https
-      nodePort: 31562
-
+      targetPort: 443
   selector:
     app: gateway
   type: LoadBalancer
