--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -142,15 +142,21 @@ kind: Ingress
 metadata:
   name: gateway-ingress
   annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.global-static-ip-name: dev-pip-usw-qa-aks
     kubernetes.io/ingress.class: addon-http-application-routing
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
   - host: gateway.1c50b018f5784721b39b.eastus.aksapp.io
     http:
       paths:
-      - backend:
+      - path: /
+        backend:
           serviceName: gateway-deployment
-          servicePort: 80
-        path: /gateway(/|$)(.*)
+          servicePort: http
+        backend:
+          serviceName: gateway-deployment
+          servicePort: https
       
