--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -57,26 +57,24 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: gateway-ingress
-#  annotations:
-#    kubernetes.io/ingress.class: addon-http-application-routing
-#    nginx.ingress.kubernetes.io/rewrite-target: /$2
+  annotations:
+    kubernetes.io/ingress.class: addon-http-application-routing
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
     - http:
-        paths:
-        - path: /
-          backend:
-            service:
-              name: gateway-deployment
-              port:
-                number: 443
+      paths:
+      - path: /
+        backend:
+          serviceName: gateway-deployment
+          servicePort: 443
 #    - https:
 #        paths:
 #        - path: /
 #          backend:
-#            service:
-#              name: gateway-deployment
-#              port:
-#                number: 443
+#            serviceName: gateway-deployment
+#            servicePort: 443
         
       
