--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -64,9 +64,11 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
+  - host: gateway.1c50b018f5784721b39b.eastus.aksapp.io
     http:
       paths:
-      - backend:
+      - path: /
+        backend:
           serviceName: gateway-deployment
           servicePort: 443
         path: /gateway(/|$)(.*)
