--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,13 +1,14 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: gateway-deployment
-# spec:
-#   ports:
-#     - name: gateway
-#       port: 80
-#       targetPort: gateway-http
-#   selector:
-#     app: gateway
-#   type: LoadBalancer
-# ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  namespace: nginx-ingress
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    name: http
+  - port: 443
+    name: https
+  selector:
+    app: nginx
