--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -23,7 +23,9 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 80
-              name: gateway-http
+              name: http
+            - containerPort: 443
+              name: https
 ---
 apiVersion: v1
 kind: Secret
@@ -52,6 +54,15 @@ spec:
     app: gateway
   type: LoadBalancer
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: tcp-services
+  namespace: ingress-nginx
+data:
+  443: "default/gateway-deployment:443"
+  80: "default/gateway-deployment:80"
+---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
@@ -68,7 +79,7 @@ spec:
   - host: gateway.1c50b018f5784721b39b.eastus.aksapp.io
     http:
       paths:
-      - path: /
+      - path: /(/|$)(.*)
         backend:
           serviceName: gateway-deployment
-          servicePort: 80
+          servicePort: 443
