--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: default
   name: gateway
 spec:
   replicas: 1
@@ -30,6 +31,7 @@ spec:
 apiVersion: v1
 kind: Secret
 metadata:
+  namespace: default
    name: secret-tls
 type: kubernetes.io/tls
 data:
@@ -39,6 +41,7 @@ data:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: default
   name: gateway-deployment
 spec:
   ports:
@@ -58,7 +61,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: tcp-services
-  namespace: ingress-nginx
+  namespace: default
 data:
   443: "default/gateway-deployment:443"
   80: "default/gateway-deployment:80"
@@ -67,6 +70,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: gateway-ingress
+  namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
