--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -95,7 +95,7 @@ stages:
             - task: Kubernetes@1
               inputs:
                 connectionType: 'Kubernetes Service Connection'
-                kubernetesServiceEndpoint: 'Kubernetes Cluster Connection'
+                kubernetesServiceEndpoint: 'kube3'
                 namespace: 'default'
                 command: 'login'
 
@@ -105,14 +105,14 @@ stages:
                 action: createSecret
                 secretName: $(imagePullSecret)
                 dockerRegistryEndpoint: 'Container Registry Connection'
-                kubernetesServiceConnection: 'Kubernetes Cluster Connection'
+                kubernetesServiceConnection: 'kube3'
                 namespace: 'default'
 
             - task: KubernetesManifest@0
               displayName: Deploy to Kubernetes cluster
               inputs:
                 action: deploy
-                kubernetesServiceConnection: 'Kubernetes Cluster Connection'
+                kubernetesServiceConnection: 'kube3'
                 namespace: 'default'
                 manifests: |
                   $(Pipeline.Workspace)/manifests/deployment.yml
