--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,13 +51,6 @@ stages:
           - task: SonarCloudPublish@1
             displayName: Publish Code Analysis
 
-          - task: DotNetCoreCLI@2
-            displayName: 'dotnet publish and zip'
-            inputs:
-              command: 'publish'
-              publishWebProjects: true
-              zipAfterPublish: true
-
   - stage: 'Build'
     displayName: Build and push
     jobs:
@@ -81,12 +74,11 @@ stages:
     displayName: 'Deploy the containers'
     dependsOn: Build
     jobs:
-    
     - deployment: Deploy
       displayName: Deploy
       pool:
         vmImage: 'ubuntu-latest'
-      environment: 'spike2.default'
+      environment: 'spike.default'
       variables:
       - group: Release
       strategy:
@@ -96,14 +88,14 @@ stages:
             - download: current
               artifact: manifests
 
-
             - task: KubectlInstaller@0
               inputs:
                 kubectlVersion: 'latest'
+                
             - task: Kubernetes@1
               inputs:
                 connectionType: 'Kubernetes Service Connection'
-                kubernetesServiceEndpoint: 'Kubernetes Cluster Connection Take 2'
+                kubernetesServiceEndpoint: 'kube3'
                 namespace: 'default'
                 command: 'login'
 
@@ -113,14 +105,14 @@ stages:
                 action: createSecret
                 secretName: $(imagePullSecret)
                 dockerRegistryEndpoint: 'Container Registry Connection'
-                kubernetesServiceConnection: 'Kubernetes Cluster Connection Take 2'
+                kubernetesServiceConnection: 'kube3'
                 namespace: 'default'
 
             - task: KubernetesManifest@0
               displayName: Deploy to Kubernetes cluster
               inputs:
                 action: deploy
-                kubernetesServiceConnection: 'Kubernetes Cluster Connection Take 2'
+                kubernetesServiceConnection: 'kube3'
                 namespace: 'default'
                 manifests: |
                   $(Pipeline.Workspace)/manifests/deployment.yml
@@ -128,7 +120,6 @@ stages:
                   $(imagePullSecret)
                 containers: |
                   $(RegistryName)/$(gatewayRepository):$(tag)
-            
 
             - task: Kubernetes@1
               inputs:
