--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -82,7 +82,7 @@ apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: tls-secret
-  namespace: ingress-basic
+  namespace: default
 spec:
   secretName: tls-secret
   dnsNames:
