--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -63,6 +63,7 @@ apiVersion: cert-manager.io/v1alpha2
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
+  namespace: default
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
@@ -107,6 +108,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: "true"
     cert-manager.io/cluster-issuer: letsencrypt
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   tls:
   - hosts: 
