--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -47,10 +47,10 @@ metadata:
   name: gateway-deployment
 spec:
   ports:
-    - name: http
-      protocol: TCP
-      port: 80
-      targetPort: 80
+#    - name: http
+#      protocol: TCP
+#      port: 80
+#      targetPort: 80
     - name: https
       protocol: TCP
       port: 443
@@ -126,3 +126,4 @@ spec:
           serviceName: gateway-deployment
           servicePort: 443
         path: /(/|$)(.*)
+  type: LoadBalancer
