--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: outoftheparkcluster.azurecr.io/gateway
+          image: outoftheparkacr.azurecr.io/gateway
           imagePullPolicy: Always
           ports:
             - containerPort: 80 
