--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -25,8 +25,8 @@ spec:
           ports:
             - containerPort: 80 
               name: http
-            - containerPort: 443
-              name: https
+#            - containerPort: 443
+#              name: https
 ---
 apiVersion: v1
 kind: Service
@@ -40,10 +40,10 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
-    - name: https
-      protocol: TCP
-      port: 443
-      targetPort: 443
+#    - name: https
+#      protocol: TCP
+#      port: 443
+#      targetPort: 443
   selector:
     app: gateway
 ---
@@ -54,18 +54,18 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   rules:
-  - host: OutOfTheParkAPI
+  - host: outoftheparkcluster-dns-e263abe0.hcp.southcentralus.azmk8s.io
     http:
       paths:
       - backend:
           serviceName: gateway-deployment
           servicePort: 80
         path: /(/|$)(.*)
-      - backend:
-          serviceName: gateway-deployment
-          servicePort: 443
-        path: /(/|$)(.*)
+#      - backend:
+#          serviceName: gateway-deployment
+#          servicePort: 443
+#        path: /(/|$)(.*)
