--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: default
+  namespace: ingress-nginx
   name: gateway
 spec:
   replicas: 1
@@ -31,7 +31,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: default
+  namespace: ingress-nginx
   name: gateway-deployment
 spec:
   type: ClusterIP
@@ -51,7 +51,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: gateway-ingress
-  namespace: default
+  namespace: ingress-nginx
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
