--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -46,25 +46,25 @@ spec:
       targetPort: 443
   selector:
     app: gateway
----
-apiVersion: networking.k8s.io/v1beta1
-kind: Ingress
-metadata:
-  name: gateway-ingress
-  namespace: default
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
-spec:
-  rules:
-  - host: outoftheparkcluster-dns-e263abe0.hcp.southcentralus.azmk8s.io
-    http:
-      paths:
-      - backend:
-          serviceName: gateway-deployment
-          servicePort: 80
-        path: /(/|$)(.*)
+#---
+#apiVersion: networking.k8s.io/v1beta1
+#kind: Ingress
+#metadata:
+#  name: gateway-ingress
+#  namespace: default
+#  annotations:
+#    kubernetes.io/ingress.class: "nginx"
+#    nginx.ingress.kubernetes.io/rewrite-target: /$2
+#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+#spec:
+#  rules:
+#  - host: outoftheparkcluster-dns-e263abe0.hcp.southcentralus.azmk8s.io
+#    http:
+#      paths:
+#      - backend:
+#          serviceName: gateway-deployment
+#          servicePort: 80
+#        path: /(/|$)(.*)
 #      - backend:
 #          serviceName: gateway-deployment
 #          servicePort: 443
