--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -7,5 +7,11 @@
     }
   },
   "AllowedHosts": "*",
+  "JWTSettings": {
+    "securityKey": "sgRy1X8Q3vwt3D6A7mkopdLJoQguXkogmR1UTjGwEGQ=",
+    "validIssuer": "OutOfTheParkAPI",
+    "validAudience": "OutOfTheParkAPI",
+    "expiryInMinutes": 5
+  },
   "IdentityUrl": "https://10.0.167.177:443/"
 }
