--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -33,6 +33,8 @@ kind: Service
 metadata:
   namespace: default
   name: gateway-deployment
+  annotations:
+    service.beta.kubernetes.io/azure-dns-label-name: ootp-gateway
 spec:
   type: LoadBalancer
   ports:
