--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -13,5 +13,5 @@
     "validAudience": "OutOfTheParkAPI",
     "expiryInMinutes": 5
   },
-  "IdentityUrl": "http://10.0.167.177/"
+  "IdentityUrl": "http://20.188.75.184/api/Account/"
 }
